Added support for Ruby 3+ (keyword arguments), Haml 6+ (no haml buffer helpers, and added content_tag builder), and Rails 7 (errors api)

--- a/app/views/ajax_data_grid/_table_row_create_error.html.haml
+++ b/app/views/ajax_data_grid/_table_row_create_error.html.haml
@@ -1,6 +1,6 @@
 %div.row_destroy_error
   %span.text=message
-  %span.reason=model.errors.values.flatten.first
+  %span.reason=model.errors.first.message
   =link_to t('application.close'), 'javascript:;', :class => 'close'
 
   %div.original_invitation
